Fixed the visibility problem when tags were selected in the tag-select dropdowns.

--- a/prince/sidebar/content/sidebarOverlay.css
+++ b/prince/sidebar/content/sidebarOverlay.css
@@ -86,5 +86,4 @@ sidebarheader[type="splitter"] {
 treechildren::-moz-tree-row(selected) {background-color: #FFFFAA;}
 treechildren::-moz-tree-row(odd) {background-color: #EEEEEE;}
 treechildren::-moz-tree-row(odd,selected) {background-color: #FFFFAA;}
-treechildren::-moz-tree-cell-text(selected) {color: #000000;}
-treechildren::-moz-tree-cell-text(odd,selected) {color: #000000;}
+treechildren::-moz-tree-cell-text {color: #000000;}
